fix: update loki for integration test